--- a/catalog.html
+++ b/catalog.html
@@ -38,101 +38,181 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-inner">
+        <section class="catalog-hotels">
+            <h1 class="inner-header-title">Гостиницы Седоны</h1>
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs-item">
+                    <a class="breadcrumbs-link visually-hidden" href="index.html">Главная</a>
+                </li>
+                <li class="breadcrumbs-item">
+                    <a class="breadcrumbs-link">Гостиницы</a>
+                </li>
+            </ul>
+            <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+            <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+
+                <fieldset class="catalog-filter-group">
+                    <legend class="catalog-filter-title">Инфраструктура:</legend>
+                    <label class="control">
+                        <input class="control-input" type="checkbox" name="swimming-pool" checked>
+                        Бассейн
+                      </label>
+                    <label class="control">
+                        <input class="control-input" type="checkbox" name="parking" checked>
+                        Парковка
+                    </label>
+                    <label class="control">
+                        <input class="control-input" type="checkbox" name="wi-fi">
+                        Wi-Fi
+                    </label>
+                </fieldset>
+                <fieldset class="catalog-filter-group">
+                    <legend class="catalog-filter-title">Тип жилья:</legend>
+                    <ul class="catalog-filter-list">
+                        <li class="catalog-filter-item">
+                          <label class="control">
+                            <input class="control-input" type="radio" name="accommodation-type" value="hotel" checked>
+                        Гостиница
+                          </label>
+                        </li>
+                        <li class="catalog-filter-item">
+                          <label class="control">
+                            <input class="control-input" type="radio" name="accommodation-type" value="motel">
+                        Мотель
+                          </label>
+                        </li>
+                        <li class="catalog-filter-item">
+                          <label class="control">
+                            <input class="control-input" type="radio" name="accommodation-type" value="apartment">
+                        Апартаменты
+                          </label>
+                        </li>
+                      </ul>
+                </fieldset>
+                <fieldset class="catalog-filter-group">
+                    <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+                    <div class="range">
+                        <div class="range-scale">
+                          <div class="range-bar">
+                            <button class="range-toggle toggle-min">
+                              <span class="visually-hidden">Изменить минимальную цену.</span>
+                            </button>
+                            <button class="range-toggle toggle-max">
+                              <span class="visually-hidden">Изменить максимальную цену.</span>
+                            </button>
+                          </div>
+                        </div>
+        
+                        <div class="range-wrapper-inputs">
+                          <label class="catalog-filter-label">
+                            <input class="range-input" type="number" value="0" name="min-price">от
+                          </label>
+                          <label class="catalog-filter-label">
+                            <input class="range-input" type="number" value="9000" name="max-price">до
+                          </label>
+                        </div>
+                      </div>
+                </fieldset>
+                <button class="button" type="submit">Применить</button>
+                <button class="button button-undo" type="submit">Сбросить</button>
+            </form>
+        </section>
 
     </main>
     <footer class="page-footer page-footer-inner">
         <section class="newsletter newsletter-inner">
-          <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-          <p>Только полезная информация и никакого спама, <br>
-            честное бойскаутское!</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email" class="visually-hidden">Email</label>
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button newsletter-button" type="submit">Подписаться</button>
-          </form>
+            <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+            <p>Только полезная информация и никакого спама, <br>
+                честное бойскаутское!</p>
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+                <label for="newsletter-email" class="visually-hidden">Email</label>
+                <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+                    required>
+                <button class="button newsletter-button" type="submit">Подписаться</button>
+            </form>
         </section>
         <section class="footer-contacts">
-          <h2 class="visually-hidden">Контакты</h2>
-          <section class="footer-social">
-            <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a class="button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">ВКонтакте</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Телеграм</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="footer-phone">
-            <h3 class="visually-hidden">Телефон</h3>
-            <address class="footer-contacts-phone">
-              <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            </address>
-          </section>
-          <section class="htmlacademy-link">
-            <h3 class="visually-hidden">Логотип HTML Academy</h3>  
-            <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
-          </section>
+            <h2 class="visually-hidden">Контакты</h2>
+            <section class="footer-social">
+                <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="button" href="https://vk.com/htmlacademy">
+                            <span class="visually-hidden">ВКонтакте</span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="button" href="https://t.me/htmlacademy">
+                            <span class="visually-hidden">Телеграм</span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                            <span class="visually-hidden">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="footer-phone">
+                <h3 class="visually-hidden">Телефон</h3>
+                <address class="footer-contacts-phone">
+                    <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+                </address>
+            </section>
+            <section class="htmlacademy-link">
+                <h3 class="visually-hidden">Логотип HTML Academy</h3>
+                <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
+            </section>
         </section>
-      </footer><footer class="page-footer">
+    </footer>
+    <footer class="page-footer">
         <section class="newsletter">
-          <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-          <p>Только полезная информация и никакого спама, <br>
-            честное бойскаутское!</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email" class="visually-hidden">Email</label>
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button newsletter-button" type="submit">Подписаться</button>
-          </form>
+            <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+            <p>Только полезная информация и никакого спама, <br>
+                честное бойскаутское!</p>
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+                <label for="newsletter-email" class="visually-hidden">Email</label>
+                <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+                    required>
+                <button class="button newsletter-button" type="submit">Подписаться</button>
+            </form>
         </section>
         <section class="footer-contacts">
-          <h2 class="visually-hidden">Контакты</h2>
-          <section class="footer-social">
-            <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a class="button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">ВКонтакте</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Телеграм</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="footer-phone">
-            <h3 class="visually-hidden">Телефон</h3>
-            <address class="footer-contacts-phone">
-              <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            </address>
-          </section>
-          <section class="htmlacademy-link">
-            <h3 class="visually-hidden">Логотип HTML Academy</h3>  
-            <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
-          </section>
+            <h2 class="visually-hidden">Контакты</h2>
+            <section class="footer-social">
+                <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="button" href="https://vk.com/htmlacademy">
+                            <span class="visually-hidden">ВКонтакте</span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="button" href="https://t.me/htmlacademy">
+                            <span class="visually-hidden">Телеграм</span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                            <span class="visually-hidden">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="footer-phone">
+                <h3 class="visually-hidden">Телефон</h3>
+                <address class="footer-contacts-phone">
+                    <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+                </address>
+            </section>
+            <section class="htmlacademy-link">
+                <h3 class="visually-hidden">Логотип HTML Academy</h3>
+                <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
+            </section>
         </section>
-      </footer>
-    
+    </footer>
+
 
 </body>
 
