--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
             <img class="welcome-sedona" src="#" alt="Она лучше Гранд-Каньона">
         </section>
         <section class="description">
-            <h2 class="description-title">Седона — небольшой городок в Аризоне,
-                <br>заслуживающий большего!
-            </h2>
+            <h2 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
             <p class="description-advantages">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
         <section class="advantages">
@@ -58,37 +56,28 @@
             <ul class="advantages-list">
                 <li class="advantages-item">
                     <div class="advantages-darkblue">
-                        <h3 class="advantages-title">Настоящий<br>городок</h3>
+                        <h3 class="advantages-title">Настоящий городок</h3>
                         <p class="advantages-description">— №1 —</p>
-                        <p class="advantages-description">Седона — не аттракцион для <br>
-                            туристов, там течёт своя <br>
-                            жизнь</p>
+                        <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                     </div>
                     <img class="advantages-image" src="#" alt="Город Седона">
                     <ul class="advantages-nested-list">
                         <li class="avantages-item-nested">
                             <div class="advantages-nested-lightblue">
                                 <h3 class="advantages-title-nested">Жильё</h3>
-                                <p class="advantages-description-nested">Рекомендуем пожить <br>
-                                    в настоящем мотеле, <br>
-                                    всё как в кино!</p>
+                                <p class="advantages-description-nested">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                             </div>
                         </li>
                         <li class="avantages-item-nested">
                             <div class="advantages-nested-white">
                                 <h3 class="advantages-title-nested">Еда</h3>
-                                <p class="advantages-description-nested">Всегда заказывайте <br>
-                                    топовый фирменный бургер, <br>
-                                    вы не разочаруетесь!</p>
+                                <p class="advantages-description-nested">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
                             </div>
                         </li>
                         <li class="avantages-item-nested">
                             <div class="advantages-nested-lightblue">
                                 <h3 class="advantages-title-nested">Сувениры</h3>
-                                <p class="advantages-description-nested">Не только китайского, <br>
-                                    но и настоящего местного
-                                    <br>производства!
-                                </p>
+                                <p class="advantages-description-nested">Не только китайского, но и настоящего местного производства!</p>
                             </div>
                         </li>
                     </ul>
@@ -96,47 +85,30 @@
                 <li class="advantages-item">
                     <img class="advantages-image" src="#" alt="Мост дьявола">
                     <div class="advantages-darkblue">
-                        <h3 class="advantages-title">Там есть
-                            <br>мост дьявола
-                        </h3>
+                        <h3 class="advantages-title">Там есть мост дьявола</h3>
                         <p class="advantages-description">— №2 —</p>
-                        <p class="advantages-description">Да, по нему можно пройти!
-                            <br>Если вы осмелитесь,
-                            <br>разумеется
-                        </p>
+                        <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                     </div>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-lightblue">
-                        <h3 class="advantages-title">Небольшая
-                            <br>площадь
-                        </h3>
+                        <h3 class="advantages-title">Небольшая площадь</h3>
                         <p class="advantages-description">— №3 —</p>
-                        <p class="advantages-description">Все достопримечательности
-                            <br>находятся очень близко
-                        </p>
+                        <p class="advantages-description">Все достопримечательности находятся очень близко</p>
                     </div>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-blue">
-                        <h3 class="advantages-title">Красивая
-                            <br>дорога
-                        </h3>
+                        <h3 class="advantages-title">Красивая дорога</h3>
                         <p class="advantages-description">— №4 —</p>
-                        <p class="advantages-description">Ехать в Седону из Лас-Вегаса
-                            <br>совсем не скучно!
-                        </p>
+                        <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                     </div>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-lightblue">
-                        <h3 class="advantages-title">Мало
-                            <br>туристов
-                        </h3>
+                        <h3 class="advantages-title">Мало туристов</h3>
                         <p class="advantages-description">— №5 —</p>
-                        <p class="advantages-description">Большинство едет в Гранд
-                            <br>Каньон и толпится там
-                        </p>
+                        <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
                     </div>
                 </li>
             </ul>
