--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
                 <li class="advantages-item">
-                    <div class="advantages-darkblue">
+                    <div class="advantages-items advantages-town">
                         <h3 class="advantages-title">Настоящий городок</h3>
-                        <p class="advantages-description">— №1 —</p>
+                        <p class="advantages-description-number">— №1 —</p>
                         <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                     </div>
                     <img class="advantages-image" src="images/advantage/street.jpg" width="800" height="384" alt="Улицы Седоны">
                     <ul class="advantages-nested-list">
                         <li class="avantages-item-nested">
-                            <div class="advantages-nested-lightblue">
-                                <h3 class="advantages-title-nested">Жильё</h3>
+                            <div class="advantages-items advantages-nested-housing">
+                                <h3 class="advantages-title">Жильё</h3>
                                 <p class="advantages-description-nested">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                             </div>
                         </li>
                         <li class="avantages-item-nested">
-                            <div class="advantages-nested-white">
-                                <h3 class="advantages-title-nested">Еда</h3>
+                            <div class="advantages-items advantages-nested-eating">
+                                <h3 class="advantages-title">Еда</h3>
                                 <p class="advantages-description-nested">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
                             </div>
                         </li>
                         <li class="avantages-item-nested">
-                            <div class="advantages-nested-lightblue">
-                                <h3 class="advantages-title-nested">Сувениры</h3>
+                            <div class="advantages-items advantages-nested-souvenir">
+                                <h3 class="advantages-title">Сувениры</h3>
                                 <p class="advantages-description-nested">Не только китайского, но и настоящего местного производства!</p>
                             </div>
                         </li>
@@ -83,30 +83,30 @@
                 </li>
                 <li class="advantages-item">
                     <img class="advantages-image" src="images/advantage/bridge.jpg" width="800" height="384" alt="Мост дьявола">
-                    <div class="advantages-darkblue">
+                    <div class="advantages-items advantages-bridge">
                         <h3 class="advantages-title">Там есть мост дьявола</h3>
-                        <p class="advantages-description">— №2 —</p>
+                        <p class="advantages-description-number">— №2 —</p>
                         <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                     </div>
                 </li>
                 <li class="advantages-item">
-                    <div class="advantages-lightblue">
+                    <div class="advantages-items advantages-area">
                         <h3 class="advantages-title">Небольшая площадь</h3>
-                        <p class="advantages-description">— №3 —</p>
+                        <p class="advantages-description-number">— №3 —</p>
                         <p class="advantages-description">Все достопримечательности находятся очень близко</p>
                     </div>
                 </li>
                 <li class="advantages-item">
-                    <div class="advantages-blue">
+                    <div class="advantages-items advantages-road">
                         <h3 class="advantages-title">Красивая дорога</h3>
-                        <p class="advantages-description">— №4 —</p>
+                        <p class="advantages-description-number">— №4 —</p>
                         <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                     </div>
                 </li>
                 <li class="advantages-item">
-                    <div class="advantages-lightblue">
+                    <div class="advantages-items advantages-tourists">
                         <h3 class="advantages-title">Мало туристов</h3>
-                        <p class="advantages-description">— №5 —</p>
+                        <p class="advantages-description-number">— №5 —</p>
                         <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
                     </div>
                 </li>
@@ -114,7 +114,7 @@
         </section>
         <section class="search">
             <h2 class="search-title">Заинтересовались?</h2>
-            <p>Укажите предполагаемые даты поездки, <br>
+            <p class="search-basic">Укажите предполагаемые даты поездки, <br>
                 и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button button-basic search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
         </section>
@@ -137,17 +137,17 @@
             <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a class="button" href="https://vk.com/htmlacademy">
+                <a class="button footer-social-link" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">ВКонтакте</span>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="button" href="https://t.me/htmlacademy">
+                <a class="button footer-social-link" href="https://t.me/htmlacademy">
                   <span class="visually-hidden">Телеграм</span>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <a class="button footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">Youtube</span>
                 </a>
               </li>
