--- a/catalog.html
+++ b/catalog.html
@@ -121,18 +121,18 @@
         </section>
         <section class="catalog-results">
             <h2 class="catalog-result-title">Найдено гостиниц: 38</h2>
-            <select class="select-control" aria-label="Сортировка">
+            <select class="select-control" aria-label="Сортировка" name="hotels-found">
                 <option value="popular">Сначала популярные</option>
-                <option value="cheap">Сначала дешевые</option>
+                <option value="cheap" selected>Сначала дешевые</option>
                 <option value="expensive">Сначала дорогие</option>
             </select>
-            <a href="#" class="button button-white button-active">
+            <a href="#" class="button button-view button-active">
                 <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button button-white">
+            <a href="#" class="button button-view">
                 <span class="visually-hidden">Показать слайдшоу</span>
             </a>
-            <a class="button" href="#">
+            <a class="button button-view" href="#">
                 <span class="visually-hidden">Показать список</span>
             </a>
             <ul class="hotel-card">
@@ -196,6 +196,10 @@
                     <div class="hotel-card-button button button button-ranking">Рейтинг: 5,0</div>
                 </li>  
             </ul>
+            <div class="hotel-card-more">
+                <a class="button button-additional button-more" href="#">Загрузить ещё</a>    
+            </div>
+            
             <ul class="pagination">
                 <li class="pagination-item">
                     <a class="button button-pagination-current pagination-link">1</a>
@@ -218,7 +222,7 @@
               </ul>
               <form action="https://echo.htmlacademy.ru/courses" method="post">
                          
-                <p>Гостиниц на странице:</p>
+                <p class="hotels-amount">Гостиниц на странице:</p>
                 <select class="button button-hotels-amount" name="hotels-amount">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -237,7 +241,7 @@
     </main>
     <footer class="page-footer page-footer-inner">
         <section class="newsletter newsletter-inner">
-            <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+            <h2 class="page-footer-title footer-title-inner">Подпишитесь на рассылку</h2>
             <p>Только полезная информация и никакого спама, <br>
                 честное бойскаутское!</p>
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -253,17 +257,17 @@
                 <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
-                        <a class="button" href="https://vk.com/htmlacademy">
+                        <a class="button footer-social-link" href="https://vk.com/htmlacademy">
                             <span class="visually-hidden">ВКонтакте</span>
                         </a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="button" href="https://t.me/htmlacademy">
+                        <a class="button footer-social-link" href="https://t.me/htmlacademy">
                             <span class="visually-hidden">Телеграм</span>
                         </a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                        <a class="button footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
                             <span class="visually-hidden">Youtube</span>
                         </a>
                     </li>
