--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
     </main>
     <footer class="page-footer">
-        <section class="newsletter">
+        <section class="newsletter newsletter-index">
           <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама, <br>
             честное бойскаутское!</p>
