--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     </main>
     <footer class="page-footer">
       <section class="newsletter newsletter-index">
-        <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, <br>
-          честное бойскаутское!</p>
+          <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+          <p class="newsletter-description">Только полезная информация и никакого спама, <br>
+            честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="newsletter-email" class="visually-hidden">Email</label>
           <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
