--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
           </fieldset>
           <fieldset class="catalog-filter-group filter-buttons">
             <div>
-              <button class="button button-additional button-apply" type="submit">Применить</button>
+              <button class="button button-additional" type="submit">Применить</button>
             </div>
             <div>
               <button class="button button-reset" type="submit">Сбросить</button>
@@ -221,9 +221,6 @@
             <div class="hotel-card-button button button button-ranking">Рейтинг: 5,0</div>
           </li>
         </ul>
-        <div class="hotel-card-more">
-          <a class="button button-additional button-more" href="#">Загрузить ещё</a>
-        </div>
         <div class="paginaion-container">
           <ul class="pagination">
             <li class="pagination-item pagination-item-current">
