--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
+        <ol class="advantages-list">
           <li class="advantages-item">
             <div class="advantages-container">
               <div class="advantages-items advantages-town">
@@ -67,14 +67,14 @@
             <ul class="advantages-nested-list">
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-housing">
-                  <h3 class="advantages-title">Жильё</h3>
+                  <h4 class="advantages-title">Жильё</h4>
                   <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
                     всё как в кино!</p>
                 </div>
               </li>
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-eating">
-                  <h3 class="advantages-title">Еда</h3>
+                  <h4 class="advantages-title">Еда</h4>
                   <p class="advantages-description">Всегда заказывайте топовый фирменный
                     бургер, вы не
                     разочаруетесь!</p>
@@ -82,7 +82,7 @@
               </li>
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-souvenir">
-                  <h3 class="advantages-title">Сувениры</h3>
+                  <h4 class="advantages-title">Сувениры</h4>
                   <p class="advantages-description">Не только китайского, но и настоящего
                     местного производства!
                   </p>
@@ -119,7 +119,7 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
           </li>
-        </ul>
+        </ol>
       </section>
       <section class="search">
         <h2 class="search-title">Заинтересовались?</h2>
