--- a/catalog.html
+++ b/catalog.html
@@ -65,11 +65,12 @@
             <fieldset class="catalog-filter-group filter-infrastructure">
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
+
                 <li class="catalog-filter-item">
                   <label class="control control-infrastructure">
                     <input class="visually-hidden control-input" type="checkbox" name="swimming-pool" checked>
                     <span class="control-mark"></span>
-                    <span">Бассейн</span>
+                    <span>Бассейн</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
@@ -93,7 +94,8 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control control-accomodation">
-                    <input class="visually-hidden control-input" type="radio" name="accommodation-type" value="hotel" checked>
+                    <input class="visually-hidden control-input" type="radio" name="accommodation-type" value="hotel"
+                      checked>
                     <span class="control-mark"></span>
                     <span>Гостиница</span>
                   </label>
@@ -107,7 +109,8 @@
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control control-accomodation">
-                    <input class="visually-hidden control-input" type="radio" name="accommodation-type" value="apartment">
+                    <input class="visually-hidden control-input" type="radio" name="accommodation-type"
+                      value="apartment">
                     <span class="control-mark"></span>
                     <span>Апартаменты</span>
                   </label>
@@ -143,7 +146,7 @@
               <button class="button button-additional button-apply" type="submit">Применить</button>
 
 
-              <button class="button button-reset" type="submit">Сбросить</button>
+              <button class="button button-reset" type="button">Сбросить</button>
 
             </fieldset>
           </div>
