--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </footer>
 
   </div>
-  <div class="modal-container">
+  <div class="modal-container modal-container-close">
     <div class="modal modal-search">
 
       <div class="modal-title-container">
